# cludebot

./: .dockerignore  .env.example  .gitignore  .mcp.json  .npmignore  .redeploy  AGENTS.md  Anchor.toml  BENCHMARK_RESULTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.mcp  EVALUATOR_VERDICT.md  HONEST_LIMITATIONS.md  LICENSE  README.md  SKILL.md  dream.html  entity-graph-schema.sql  gears.html  memory-defrag.html  memory-sync.html  package-lock.json  package.json  pitch-script.md  pnpm-lock.yaml  pnpm-workspace.yaml  railway.toml  server.json  social-visual.html  supabase-schema.sql  tsconfig.sdk.json  vitest.config.ts  x-thread.md
.github/: PULL_REQUEST_TEMPLATE.md
.usage-report-cache/: last-run.json
chat/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
dashboard/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
docs/: INTEGRATION.md  MOLECULAR_MEMORY.md  memorypack.md  notion-handoff-2026-04-27.md  token-sink-runbook.md
examples/: basic-memory.ts  chat-agent.ts  progressive-disclosure.ts
migrations/: 002_memory_vector_upgrade.sql  003_batch_operations.sql  003_entities.sql  003_hash_ids_and_compaction.sql  004_memory_links.sql  005_importance_rescoring.sql  006_hnsw_index.sql
programs/memory-registry/: Cargo.toml
programs/memory-registry/src/: errors.rs  lib.rs  state.rs
programs/memory-registry/src/instructions/: cite_memory.rs  create_pool.rs  initialize.rs  mod.rs  register_memory.rs  store_memory_in_pool.rs  verify_memory.rs
scripts/: benchmark.ts  build-publish.mjs  (+8 more)
(+5288 files in other folders)
